[package]
name = "finddup"
version = "0.1.0"
edition = "2024"
authors = ["Wolf Arif Mardin"]
description = "A duplicate file finder in Rust"
license = "MIT"
repository = "https://github.com/mulain/finddup"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
walkdir = "2.5"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"

[lints.clippy]
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
implicit_clone = "warn"
redundant_else = "warn"
try_err = "warn"
unreadable_literal = "warn"